deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: springboot-sample
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-sample
        type: front-end
    spec:
      containers:
      - name: springboot-sample
        image: devopsbatch17/petclinic:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: registry.hub.docker.com
  selector:
    matchLabels:
      app: springboot-sample
