service-definition.yml
apiVersion: v1
kind: Service
metadata:
    name: springboot-service
spec:
    type: LoadBalancer
    ports:
     - targetPort: 8080
       port: 80
       nodePort: 30008
    selector:
        app: springboot-sample
