Ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  backend:
    serviceName: springboot-sample
    servicePort: 80
